# green-ai-alphaearth

./: .gitignore  README.md  SETUP.md  config.yaml  pyproject.toml  pytest.ini  requirements_run.txt  verify_setup.sh
data/: README.md
data/processed/: MANIFEST.md  final_models_2020_2024_results.pkl  final_rf_model_2020_2024.pkl  final_xgb_model_2020_2024.pkl  walk_dataset.pkl
docs/: alphaearth_annual_embedding_correction.md  comprehensive_hard_validation_strategy.md  data_leakage_verification_results.md  deep_dive_summary.md  deforestation_seasonal_literature.md  drift_decomposition_experiment_results.md  extended_crawl_findings.md  feature_extraction_consolidation.md  fire_feature_investigation.md  hard_validation_collection_summary.md  hard_validation_final_results.md  hard_validation_session_summary.md  hard_validation_sets_summary.md  honest_performance_evaluation.md  implementation_blueprint.md  learning_journey_crawl_to_run.md  logging_vs_fire_clarification.md  multiscale_embeddings_results.md  phase1_corrected_results_analysis.md  phase1_experiment_explained.md  phase1_glad_validation_summary.md  phase1_options_comparison.md  phase1_summary_and_next_steps.md  progressive_temporal_validation_results.md  quarterly_validation_findings.md  repository_cleanup_summary.md  run_phase_architecture.md  run_phase_completion_summary.md  run_phase_user_guide.md  scaling_and_specialization_strategy.md  spatial_leakage_incident_report.md  spatial_plan_completion_status.md  spatial_precursor_analysis_plan.md  stretch_goals.md  synthetic_contamination_experiment.md  system_architecture.md  temporal_adaptation_final_results.md  temporal_generalization_experiment_plan.md  temporal_generalization_results.md  temporal_investigation_findings.md  (+10 more)
results/: README.md
results/deep_dive/: dimension_analysis.json  (+3 more)
src/utils/: geo.py  (+5 more)
tests/: README.md  test_config.py  test_geo.py  test_visualization.py
(+182 files in other folders)
